--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/ioredis": "^4.16.5",
     "@types/mocha": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
@@ -21,6 +22,8 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "express": "^4.17.1",
     "ioredis": "^4.17.3"
   }
 }
