--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-delay-queue",
   "version": "1.0.0",
-  "description": "",
+  "description": "node delay queue based on redis",
   "main": "dist/index.js",
   "files": [
     "dist"
@@ -9,10 +9,16 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha -t 10000"
+    "test": "mocha -t 10000",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "delay",
+    "queue",
+    "message",
+    "redis"
+  ],
+  "author": "liqiqiang",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.6",
