--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test": "mocha -t 10000",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -29,19 +30,19 @@
   },
   "homepage": "https://github.com/lqqyt2423/node-delay-queue#readme",
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@types/ioredis": "^4.16.5",
-    "@types/mocha": "^7.0.2",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
-    "mocha": "^8.0.1",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.5"
+    "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.27.1",
+    "@types/mocha": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
+    "eslint": "^7.32.0",
+    "mocha": "^9.1.1",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "express": "^4.17.1",
-    "ioredis": "^4.17.3"
+    "ioredis": "^4.27.9"
   }
 }
